[tool.poetry]
name = "currency-telegram-bot"
version = "0.1.0"
description = "currency-telegram-bot"
authors = ["nyckolas <nyckolas.python@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.21"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
